test/language/spec/declarations/invalid/duplicate_function.topo
// TEST: duplicate function declaration
// EXPECT-ERROR: duplicate function declaration
// EXPECT-LINE: 8

namespace app {
  public:
    void run();
    void run();
}
